--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -12,6 +12,9 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 5);
   text-decoration: none;
   cursor: pointer;
+  @media only screen and (max-width: 480px){
+    width: 90%;
+  }
   .project_name{
     padding: 5px;
     background-color: $fourth;
