--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -11,4 +11,9 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  @media only screen and (max-width: 480px){
+    flex-direction: column;
+    justify-content: center;
+    padding:0 20px;
+  }
 }
