nested button to a href rather than the other way round

--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -73,7 +73,7 @@
       }
     }
     .subscribed_projects{
-      margin-top: 10%;
+      margin-top: 25px;
     }
     .sidebar_link{
       color: $primary;
