--- a/client/stylesheets/components/message.scss
+++ b/client/stylesheets/components/message.scss
@@ -22,7 +22,7 @@
     .username{
       font-size: 1.2em;
       font-weight: bold;
-      color: $secondary;
+      color: $black;
       margin-left: 15px;
     }
     .message{
