--- a/client/stylesheets/components/Auth.scss
+++ b/client/stylesheets/components/Auth.scss
@@ -10,7 +10,7 @@
       width: 50px;
     }
     input{
-      background-color: $primary;
+      background-color: $white;
       border-radius: 4px;
       border: 1px solid #ccc;
       color: #333;
@@ -26,7 +26,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    // background:$primary;
+    // background:$white;
     padding: 10px;
     margin: 20px 0;
   }
