--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -8,7 +8,7 @@
   margin: 10px;
   vertical-align: top;
   position: relative;
-  background-color: $primary;
+  background-color: $white;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 5);
   text-decoration: none;
   cursor: pointer;
@@ -17,13 +17,13 @@
   }
   .project_name{
     padding: 5px;
-    background-color: $fourth;
-    color: $primary;
+    background-color: $blue;
+    color: $white;
     font-weight: bold;
     text-align: center;
   }
   .project_description{
-    color: $fourth;
+    color: $blue;
     padding:10px;
     height:40%;
     overflow:hidden;
@@ -32,8 +32,8 @@
   }
   .project_category{
     text-align: center;
-    background-color: $fourth;
-    color: $primary;
+    background-color: $blue;
+    color: $white;
     padding:5px;
     font-weight: bold;
     border-bottom: 0.5px solid black;
@@ -42,7 +42,7 @@
     // position:absolute;
     box-sizing: border-box;
     width: 100%;
-    background-color: $fourth;
+    background-color: $blue;
     margin:0;
     padding:5px;
     bottom:0;
@@ -50,9 +50,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     .skill_chip{
-      background-color: $tertiary;
+      background-color: $blue;
       border-radius: 5px;
-      color: $primary;
+      color: $white;
       box-shadow: none;
       margin:2px;
       max-height: 25px;
