--- a/client/stylesheets/components/skill.scss
+++ b/client/stylesheets/components/skill.scss
@@ -15,7 +15,7 @@
   }
   .remove{
     button{
-      background:$primary;
+      background:$white;
       border: none;
       box-shadow: none;
       cursor: pointer;
