--- a/client/stylesheets/containers/UserDashboard.scss
+++ b/client/stylesheets/containers/UserDashboard.scss
@@ -14,14 +14,14 @@
       padding:0 20px;
     }
     .user_stats{
-      background-color: $primary;
+      background-color: $white;
       padding:20px;
       border-radius: 1px;
       margin: 5px;
       height: 35%;
       width:20%;
       text-align: center;
-      box-shadow: 0 1.5px 1.5px 0 $fourth;
+      box-shadow: 0 1.5px 1.5px 0 $blue;
       display: flex;
       flex-direction: column;
       @media only screen and (max-width: 480px){
@@ -35,7 +35,7 @@
         margin-top:20px;
         width:100%;
         height:2.5px;
-        background-color: $fourth;
+        background-color: $blue;
       }
       .user_avatar{
         height:80px;
@@ -63,10 +63,10 @@
     }
 
     .user_skills{
-      background-color: $primary;
+      background-color: $white;
       padding:20px;
       border-radius: 1px;
-      box-shadow: 0 1.5px 1.5px 0 $fourth;
+      box-shadow: 0 1.5px 1.5px 0 $blue;
       width:40%;
       margin: 5px;
       @media only screen and (max-width: 480px){
@@ -97,30 +97,30 @@
       .skill_break{
         width:100%;
         height:2.5px;
-        background:$fourth;
+        background:$blue;
         margin-bottom: 10px;
       }
       .Select-control{
           border:none !important;
           width:100%;
           outline: none;
-          border-bottom: 2px solid $fourth !important;
+          border-bottom: 2px solid $blue !important;
           border-radius: 0px;
           .Select-arrow-zone{
             display: none;
           }
           .Select-value{
-            color: $fourth;
+            color: $blue;
           }
       }
       .submit_skill{
-        background: $primary;
-        border: 2.5px solid $tertiary;
+        background: $white;
+        border: 2.5px solid $blue;
         transition: all 0.2s ease-in;
         cursor: pointer;
         &:hover{
-          background: $tertiary;
-          color: $primary;
+          background: $blue;
+          color: $white;
         }
       }
     }
@@ -140,13 +140,13 @@
     right:10px;
     button{
       padding: 10px;
-      background: $primary;
-      border: 2.5px solid $tertiary;
+      background: $white;
+      border: 2.5px solid $blue;
       transition: all 0.2s ease-in;
       cursor: pointer;
       &:hover{
-        background: $tertiary;
-        color: $primary;
+        background: $blue;
+        color: $white;
       }
     }
   }
@@ -170,8 +170,8 @@
     position: absolute;
     left: 50%;
     top:0;
-    background: $primary;
-    // border: 2px solid $tertiary;
+    background: $white;
+    // border: 2px solid $blue;
     height: auto;
     outline:none;
     width: 100%;
