--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -1,15 +1,21 @@
 
 @import url(https://fonts.googleapis.com/css?family=Merriweather);
 
-$secondary-text: #F3F2BF;
+$black-text: #F3F2BF;
 
 
 //v2 color-pallete
-$primary:#FFFFFF; //WHITE
-$secondary:#0B132B; //MAASTRICHT BLUE
-$tertiary: #281985; //PIXIE POWDER
-$fourth:#02020A; // RICH BLACK
-$fifth:#CECFC7;
+// $primary:#FFFFFF; //WHITE
+// $secondary:#0B132B; //MAASTRICHT BLUE
+// $tertiary: #281985; //PIXIE POWDER
+// $fourth:#02020A; // RICH BLACK
+// $fifth:#CECFC7;
+
+$white : #FFFFFF;
+$black : #000000;
+$blue : #791E94;
+$gray : #EFEFEF;
+
 
 $activeLink:#242038;
 
@@ -55,11 +61,11 @@ a {
   padding: 15px;
   width: auto;
   font-size: 1em;
-  color: $primary;
-  background-color: $fourth;
+  color: $white;
+  background-color: $blue;
   font-weight: bolder;
   box-shadow: none;
-  border: $fourth;
+  border: $blue;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.2s ease-in;
@@ -70,10 +76,10 @@ a {
     box-shadow: 0.2px 1px 0.2px 0.2px #15B358;
   }
   img{
-    background-color: $secondary;
+    background-color: $black;
   }
   a{
-    color: $primary;
+    color: $white;
   }
 }
 
@@ -94,5 +100,4 @@ a {
 
 
 @import './highlight/default.css';
-@import './font-awesome/font-awesome.min.css';
 @import './react-select.min.css';
