--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -1,16 +1,15 @@
-#List{
-  background: $white;
-  height: 100%;
-  overflow: auto;
-  h1{
-    text-align: center;
+.project_list{
+  .jumbotron{
+    width: 90%;
+    padding: 8px;
+    height: 300px;
+    background: $white;
+    box-shadow: $box-shadow;
   }
-}
-
-#project_list{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin: 8px;
   @media only screen and (max-width: 480px){
     flex-direction: column;
     justify-content: center;
