--- a/client/stylesheets/containers/UserProfile_1.scss
+++ b/client/stylesheets/containers/UserProfile_1.scss
@@ -17,10 +17,10 @@
     box-shadow: $box-shadow;
     flex-direction: column;
     justify-content: space-around;
-    border-bottom: 1px solid #e2e2e2;
+    border-bottom: $border;
     .user_avatar{
       padding-bottom: 2em;
-      border-bottom: 1px solid #e2e2e2;
+      border-bottom: $border;
       &__picture{
         height: 240px;
         width: 240px;
@@ -65,18 +65,34 @@
         flex-grow: 3;
       }
       .submit_skill{
-        padding: 8px;
+        padding: 9px;
+        border-radius: 4px;
       }
     }
     &__table{
       width: 100%;
+      border-top: $border;
       flex-grow: 2;
+      padding-top: 10px;
       margin-top: 50px;
       font-size: 1.5em;
+      padding-bottom: 25px;
       table-layout: fixed;
+      &--no_edit{
+        padding-top: 10px;
+        margin-top: 5px;
+      }
     }
     &__skill_name{
       color: $blue;
     }
   }
+}
+
+.user_skills__commend_button{
+  background: none;
+  padding: 10px;
+  font-size: 1em;
+  cursor: pointer;
+  outline: none;
 }
