--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -17,6 +17,7 @@ $blue : #791E94;
 $gray : #EFEFEF;
 
 $box-shadow: 0 1px 2px rgba(0,0,0,.1);
+$border : 2px solid #e2e2e2;
 
 $activeLink:#242038;
 
