--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -15,12 +15,9 @@
     .category_header{
       margin-bottom: 5px;
     }
-    &__name {
-      text-align: center;
-      margin-bottom: 5px;
-    }
     &__category{
       margin-bottom: 5px;
+      padding-left: 20px;
     }
     &__CTA{
       width: 100%;
@@ -30,6 +27,7 @@
       display: flex;
       width: 100%;
       overflow: hidden;
+      padding-left: 20px;
       &__members{
         height: 50px;
         width: 50px;
@@ -38,7 +36,11 @@
     }
     .project_links{
       margin-top: 1.5em;
+      h3{
+        margin-bottom: 0;
+      }
       &__item{
+        padding-left: 20px;
         button{
           background: none;
           font-size: 2em;
@@ -48,6 +50,9 @@
     }
     .project_skills{
       margin-top : 1.5em;
+      button:first-child{
+        padding-left: 20px;
+      }
     }
 
     &__edit_project,
