--- a/client/stylesheets/containers/ProjectForm.scss
+++ b/client/stylesheets/containers/ProjectForm.scss
@@ -1,97 +1,47 @@
-#project_form{
-  padding: 20px;
-  height:95%;
-  overflow-y: auto;
-  .title{
-    text-align: center;
+.project_form{
+  display: flex;
+  flex-direction: row;
+  background: $white;
+  box-shadow: $box-shadow;
+  position: relative;
+  padding: 2.5em;
+  height: 500px;
+  &__title{
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    transform: translate(-50%);
   }
-  .submit_project{
-    text-align: center;
-    .submit{
-      width:250px;
-      background: $white;
-      border: 2.5px solid $blue;
-      transition: all 0.2s ease-in;
-      cursor: pointer;
-      padding:15px;
-      &:hover{
-        background: $blue;
-        color: $white;
+  .close_button{
+    position: absolute;
+    top: 5px;
+    right: 5px;
+  }
+  .primary_content,
+  .secondary_content
+  {
+    width: 50%;
+    padding: 10px;
+    margin-top: 35px;
+    .item{
+      height: 100%;
+      width: 100%;
+      margin-bottom: 10px;
+      &:last-child{
+        margin-bottom: 5px;
       }
     }
   }
-  .close_button{
-    position:absolute;
-    cursor: pointer;
-    font-size: 14px;
-    right:0;
-    top:0;
-    padding: 15px;
-    height: 15px;
-    width: 15px;
-    background: $blue;
-    color: $white;
-  }
-
-}
-
-#project_details{
-
-  .error{
-    margin:5px;
-    color: red;
-
-  }
-  input,
-  textarea
-  {
-    display: inline-block;
-    border:none !important;
-    outline: none;
-    border-radius: 0px !important;
-    border-bottom: 2px solid $blue !important;
-  }
-  .block{
-    display: block;
-    margin: 25px;
-    #name{
-
-    }
-    #description{
-      height: 150px;
-      overflow: auto;
-    }
-    input[id="name"],
-    input[id="github_link"],
-    input[id="reddit_link"],
-    textarea[id="description"],
-    {
-      background-color: $white;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      color: #333;
-      height: 36px;
-      line-height: 34px;
-      width: 100%;
-      outline:0;
-      padding: 0 10px;
-      box-sizing: border-box;
-    }
-    .Select-control{
-        border:none !important;
-        width:100%;
-        outline: none;
-        border-bottom: 2px solid $blue !important;
-        border-radius: 0px;
-        .Select-arrow-zone{
-          display: none;
-        }
-        .Select-value{
-          color: $blue;
-        }
-        .Select-clear{
-          display: none;
-        }
+  .secondary_content{
+    textarea{
+      height: 303px;
     }
   }
+  .form_submit{
+    position: absolute;
+    bottom: 60px;
+    transform: translate(-50%);
+    left: 50%;
+  }
+
 }
