--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -7,6 +7,11 @@
     box-shadow: $box-shadow;
     text-align: center;
   }
+  .user_actions{
+    display: block;
+    width: 100%;
+    padding-left: 3.5em;
+  }
   &__header{
     width: 100%;
     text-align: center;
@@ -20,5 +25,19 @@
     flex-direction: column;
     justify-content: center;
     padding:0 20px;
+  }
+}
+
+.new_project{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  // background: #F1F1F1;
+  background:rgba(255,255,255,0.95);
+  z-index:2;
+  &__form{
+    padding: 50px;
   }
 }
