--- a/client/stylesheets/containers/UserProfile.scss
+++ b/client/stylesheets/containers/UserProfile.scss
@@ -1,65 +1,98 @@
-#user_profile{
-  background: #e5e5e5;
-  overflow: auto;
-  height:100%;
-  .user_skills{
-    .headers{
-      .skill_header{
-        width: 25%;
-        @media only screen and (max-width: 480px){
-          width: 45%;
-        }
+.wrapper{
+  height: 100%;
+}
+
+.user_profile{
+  display: flex;
+  height: 100%;
+  flex-direction: row;
+  .user_stats{
+    display: flex;
+    text-align: center;
+    padding-top: 60px;
+    box-sizing: border-box;
+    width: 40%;
+    background: $white;
+    margin: 10px;
+    box-shadow: $box-shadow;
+    flex-direction: column;
+    justify-content: space-around;
+    border-bottom: $border;
+    .user_avatar{
+      padding-bottom: 2em;
+      border-bottom: $border;
+      &__picture{
+        height: 240px;
+        width: 240px;
       }
+    }
+    .user_score{
+      display: flex;
+      text-align: center;
+      justify-content: space-between;
+      padding-bottom: 30px;
+      &__level,&__xp{
+        width: 50%;
+      }
+    }
+  }
+  .user_skills{
+    text-align: center;
+    width: 60%;
+    height: auto;
+    overflow: overlay;
+    display: flex;
+    flex-direction: column;
+    background: $white;
+    margin-top: 10px;
+    box-shadow: $box-shadow;
+    position: relative;
+    align-items: stretch;
+    &__header{
+      width: 100%;
+      text-align: center;
+      vertical-align: middle;
+    }
+    &__add{
+      height: 3em;
+      display: flex;
+      background: $blue;
+
+      padding-left: 20px;
+      padding-right: 20px;
+      align-items: flex-start;
+      .Select{
+        flex-grow: 3;
+      }
+      .submit_skill{
+        padding: 9px;
+        border-radius: 4px;
+      }
+    }
+    &__table{
+      width: 100%;
+      border-top: $border;
+      flex-grow: 2;
+      padding-top: 10px;
+      margin-top: 50px;
+      font-size: 1.5em;
+      padding-bottom: 25px;
+      table-layout: fixed;
+      &--no_edit{
+        padding-top: 10px;
+        margin-top: 5px;
+      }
+    }
+    &__skill_name{
+      color: $blue;
     }
   }
 }
 
-.profile_skills{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin:0;
-  padding:0;
-
-  .user_skill{
-    display: flex !important;
-    flex-direction: row;
-    flex-grow: 2 !important;
-
-    justify-content: space-around !important;
-    .skill_name{
-      text-align: left !important;
-      width:25%;
-    }
-    .skill_commends{
-      // margin-right:80px;
-      margin-right: auto;
-      flex-grow: 1;
-      h3{
-        text-align: center;
-      }
-    }
-  }
-
-  .commend{
-    padding:0;
-    margin:0;
-    text-align: center;
-    button{
-      background: $white;
-      border: 2.5px solid $blue;
-      transition: all 0.2s ease-in;
-      cursor: pointer;
-      &:hover{
-        background: $blue;
-        color: $white;
-      }
-    }
-  }
-
-  .skill_commends{
-    text-align: right !important;
-  }
-
+.user_skills__commend_button{
+  background: none;
+  padding: 10px;
+  font-size: 1em;
+  cursor: pointer;
+  outline: none;
 }
