--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -55,6 +55,23 @@ button{
   }
 }
 
+input,
+textarea{
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  color: #333;
+  height: 36px;
+  line-height: 25px;
+  font-size: 12px;
+  outline: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: 'Merriweather';
+}
+
 a {
   text-decoration: none;
 }
@@ -88,11 +105,9 @@ a {
 @import './containers/App.scss';
 @import './containers/ProjectForm.scss';
 @import './containers/ProjectChat.scss';
-@import './containers/UserDashboard.scss';
 @import './containers/ProjectList.scss';
-@import './containers/UserProfile.scss';
 @import './containers/ProjectDetail.scss';
-@import './containers/UserProfile_1.scss';
+@import './containers/UserProfile.scss';
 
 
 @import './components/Auth.scss';
