--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -35,7 +35,7 @@
   right: 0;
   bottom: 0;
   // background: #F1F1F1;
-  background:rgba(255,255,255,0.95);
+  background-color : rgba(0,0,0,0.55);
   z-index:2;
   &__form{
     padding: 50px;
