--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -5,7 +5,7 @@
   left: 0;
   right : 0;
   bottom  : 0;
-  background-color : rgba(255, 255, 255, 0.75);
+  background-color : rgba(0,0,0,0.55);
   transition: all 0.5s ease-in;
   display: flex;
   align-items: center;
