--- a/client/stylesheets/components/Appbar/Appbar.scss
+++ b/client/stylesheets/components/Appbar/Appbar.scss
@@ -16,6 +16,10 @@
     padding: 3px;
   }
 
+  .user_nav{
+    display: flex;
+  }
+
   &.appbar--sidebarOpen{
     margin-left: 20%;
     width:80%;
@@ -86,8 +90,8 @@
       border-radius: 50%;
       margin-right: 1em;
       outline: none;
-      height: 50px;
-      width: 50px;
+      height: 2em;
+      width: 2em;
       margin-top: 1em;
     }
     .profile_menu{
