--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -17,8 +17,8 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
-  background: $white;
-  border: 2px solid $blue;
+  background: $card-color;
+  border: 2px solid $tertiary;
   height: auto;
   width: auto;
   transition: all 0.5s ease-in;
@@ -34,7 +34,7 @@
   bottom:0;
   overflow: auto;
   right:0;
-  background: #F1F1F1;
+  background: $primary;
   &:after{
     height:100%;
   }
@@ -80,7 +80,7 @@
     padding:5px;
     border-radius: 1px;
     box-shadow: 0 1px 1px 1px;
-    background-color: white;
+    background-color: $card-color;
     display: block;
     height: 20%;
     border: 1px solid black;
@@ -88,12 +88,12 @@
     z-index: 5;
     pointer-events: auto;
     .heading{
-      background: $blue;
-      color: $white;
+      background: $primary;
+      color: $secondary;
     }
     button{
-      background: $white;
-      border: 2.5px solid $blue;
+      background: $secondary;
+      border: 2.5px solid $tertiary;
       transition: all 0.2s ease-in;
       cursor: pointer;
       &:hover{
