--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -24,7 +24,8 @@ $text: #000000;
 // $border : 2px solid #e2e2e2;
 
 $box-shadow: 0 1px 2px $tertiary;
-$border : 2px solid $tertiary;
+// $border : 2px solid $tertiary;
+$border: 1px solid #E2E2E2;
 
 $activeLink: #B5B6B5;
 
