--- a/client/stylesheets/components/Sidebar.scss
+++ b/client/stylesheets/components/Sidebar.scss
@@ -4,9 +4,16 @@
   width: 20%;
   left: -20%;
   transition: all 0.5s ease-in;
-  background : $secondary;
+  // background : $secondary;
+  background: #F8F8F8;
   overflow-y: auto;
-  color: $tertiary;
+  // color: $tertiary;
+  color: #343434;
+  border-right: 1px solid #E2E2E2;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
 
   &.sidebar--open{
     left: 0px
@@ -20,9 +27,11 @@
     width: 100%;
     height: auto;
     text-align: center;
+    flex: 1;
     // padding: 10px 0 25px 0;
+    border-bottom: $border;
     img{
-      height: 8em;
+      height: 5.1em;
       width: 8em;
     }
   }
@@ -30,15 +39,27 @@
   .subscribed_projects{
     width: 100%;
     box-sizing:  border-box;
-    text-align: center;
-    color : $card-color;
+    // text-align: center;
+    // color : $card-color;
+    color: #e2e2e2;
     // border-top: $border;
     // border-bottom: 1px solid #1a1a1a;
     display: flex;
     flex-direction: column;
-    max-height: 350px;
+    // max-height: 350px;
+    flex: 7.2;
+    // border-top: $border;
+    border-bottom: $border;
+    // min-height: 350px;
+
+    &__header{
+      text-align: left;
+      margin-bottom: 0px;
+      padding-left: 1em;
+    }
+
     &__item{
-      padding: 1em 0.5em;
+      padding: 0.5em 2em;
       text-decoration: none;
       width: 100%;
       color: $tertiary;
@@ -46,11 +67,11 @@
       margin-bottom: 0.2px;
       box-sizing: border-box;
       &:hover{
-        color: $white;
+        color: #343434;
       }
       &.active_link{
-        background-color: #111214;
-        color: $card-color;
+        // background-color: #111214;
+        color: #343434;
       }
       &:last-child{
         margin-bottom: 0;
@@ -60,12 +81,36 @@
 
   &__text {
     padding: 1em 2.5em;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    // min-height: 500px;
+    border-bottom: $border;
+    flex: 7.2;
     h1{
       padding-top: 1.5em;
     }
     p{
-      font-size: 0.6rem;
-      color: $card-color;
+
+    }
+    a {
+      margin-top: 1.5em;
+    }
+    .create_project{
+      color: #52489c;
+      width: auto;
+      font-size: 1.2em;
+      &:hover{
+        border-bottom: 1.5px dotted #52489c;
+      }
+    }
+    .explore_projects{
+      color: #52489c;
+      width: auto;
+      font-size: 1.2em;
+      &:hover{
+        border-bottom: 1.5px dotted #52489c;
+      }
     }
   }
 
@@ -74,34 +119,25 @@
     width: 100%;
     text-align: center;
     &--bottom{
-      position: absolute;
-      bottom: 1em;
+      // position: absolute;
+      flex: 1;
+      // bottom: 1em;
+      height: auto;
       width: 100%;
       text-align: center;
-    }
-    &__explore_button{
-      width: 80%;
-      padding: 0.5em;
-      background: $white;
-      border: 2px solid $tertiary;
-      color: $text;
+      padding: 10px;
       box-sizing: border-box;
-      border-radius: 4px;
-      margin-bottom: 0.5em;
-      margin-top: 0.5em;
     }
     &__lobby_button{
       width: 80%;
       padding: 0.5em;
-      background: $white;
-      border: 2px solid $tertiary;
-      color: $text;
+      // background: $white;
+      background: #52489c;
+      // border: 2px solid $tertiary;
+      // color: $text;
+      color: #FCF7FF;
       box-sizing: border-box;
       border-radius: 4px;
-    }
-    &--top{
-      width: 100%;
-      text-align: center;
     }
   }
 
