--- a/client/stylesheets/containers/App.scss
+++ b/client/stylesheets/containers/App.scss
@@ -34,7 +34,8 @@
   bottom:0;
   overflow: auto;
   right:0;
-  background: $primary;
+  // background: $primary;
+  background: #FCF7FF;
   &:after{
     height:100%;
   }
