--- a/client/stylesheets/components/Sidebar.scss
+++ b/client/stylesheets/components/Sidebar.scss
@@ -40,6 +40,7 @@
     width: 100%;
     box-sizing:  border-box;
     // text-align: center;
+
     // color : $card-color;
     color: #e2e2e2;
     // border-top: $border;
@@ -56,6 +57,7 @@
       text-align: left;
       margin-bottom: 0px;
       padding-left: 1em;
+      color: #0f0f0f;
     }
 
     &__item{
