--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -132,6 +132,7 @@ a {
 @import './components/Sidebar.scss';
 @import './components/Appbar/Appbar.scss';
 @import './components/Appbar/UserNotifications.scss';
+@import './components/loader.scss';
 
 @import './highlight/default.css';
 @import './react-select.min.css';
